added zapier generator form data management

--- a/modules/openapi-generator/src/main/resources/zapier/api.mustache
+++ b/modules/openapi-generator/src/main/resources/zapier/api.mustache
@@ -1,8 +1,15 @@
 {{#imports}}{{{import}}}
 {{/imports}}
 const utils = require('../utils/utils');
-
 {{#operations}}
+{{#operation}}
+{{#isMultipart}}
+const FormData = require('form-data');
+{{/isMultipart}}
+{{/operation}}
+{{/operations}}
+{{#operations}}
+
 module.exports = {
 {{#operation}}
     {{operationId}}: {
@@ -46,13 +53,27 @@ module.exports = {
                 {{/returnType}}
             ],
             perform: async (z, bundle) => {
+                {{#isMultipart}}
+                const formData = new FormData()
+                {{#allParams}}
+                {{#isFormParam}}
+                {{^isFile}}
+                formData.append('{{baseName}}', bundle.inputData?.['{{baseName}}'])
+                {{/isFile}}
+                {{#isFile}}
+                const filename = bundle.inputData?.['filename'] || bundle.inputData?.['{{baseName}}'].split('/').slice(-1)[0]
+                formData.append('{{baseName}}', (await (await z.request({url: bundle.inputData?.['{{baseName}}'], method: 'GET', raw: true})).buffer()), { filename: filename })
+                {{/isFile}}
+                {{/isFormParam}}
+                {{/allParams}}
+                {{/isMultipart}}
                 const options = {
                     url: utils.replacePathParameters('{{basePath}}{{path}}'),
                     method: '{{httpMethod}}',
                     removeMissingValuesFrom: { params: true, body: true },
                     headers: {
                         'Authorization': 'Bearer {{=<% %>=}}{{bundle.authData.access_token}}<%={{ }}=%>',
-                        'Content-Type': '{{#consumes}}{{{mediaType}}}{{^-last}}, {{/-last}}{{/consumes}}',
+                        {{^isMultipart}}'Content-Type': '{{#consumes}}{{{mediaType}}}{{^-last}}, {{/-last}}{{/consumes}}',{{/isMultipart}}
                         'Accept': '{{#produces}}{{{mediaType}}}{{^-last}}, {{/-last}}{{/produces}}',
                     },
                     params: {
@@ -62,13 +83,13 @@ module.exports = {
                     {{/isQueryParam}}
                     {{/allParams}}
                     },
-                    body: {
+                    body: {{#isMultipart}}formData,{{/isMultipart}}{{^isMultipart}}{
                     {{#allParams}}
                     {{#isBodyParam}}
                         {{#isPrimitiveType}}'{{baseName}}': bundle.inputData?.['{{baseName}}']{{/isPrimitiveType}}{{^isPrimitiveType}}...{{baseName}}.mapping(bundle){{/isPrimitiveType}},
                     {{/isBodyParam}}
                     {{/allParams}}
-                    },
+                    },{{/isMultipart}}
                 }
                 return z.request(options).then((response) => {
                     response.throwForStatus();
