--- a/modules/openapi-generator/src/main/resources/zapier/package.mustache
+++ b/modules/openapi-generator/src/main/resources/zapier/package.mustache
@@ -13,7 +13,8 @@
   },
   "dependencies": {
     "lodash": "^4.17.21",
-    "zapier-platform-core": "14.1.1"
+    "zapier-platform-core": "14.1.1",
+    "form-data": "2.1.4"
   },
   "devDependencies": {
     "mocha": "^10.2.0",
