converted enum to proper value in one place to illustrate a blocker

--- a/modules/openapi-generator/src/main/resources/csharp/libraries/generichost/api.mustache
+++ b/modules/openapi-generator/src/main/resources/csharp/libraries/generichost/api.mustache
@@ -332,7 +332,17 @@ namespace {{packageName}}.{{apiPackage}}
                     {{#queryParams}}
                     {{^required}}
                     if ({{paramName}} != null)
+                    {{^isEnum}}
                         parseQueryStringLocalVar["{{baseName}}"] = {{paramName}}.ToString();
+                    {{/isEnum}}
+                    {{#isEnum}}
+                        {{#isInnerEnum}}
+                        // TODO
+                        {{/isInnerEnum}}
+                        {{^isInnerEnum}}
+                        parseQueryStringLocalVar["{{baseName}}"] = {{dataType}}ValueConverter.ToJsonValue({{paramName}}.Value){{#allowableValues}}{{#-first}}{{#enumVars}}{{#-first}}{{^isString}}.ToString(){{/isString}}{{/-first}}{{/enumVars}}{{/-first}}{{/allowableValues}};
+                        {{/isInnerEnum}}
+                    {{/isEnum}}
 
                     {{/required}}
                     {{#-last}}
