--- a/modules/openapi-generator/src/main/resources/csharp-netcore/ApiClient.mustache
+++ b/modules/openapi-generator/src/main/resources/csharp-netcore/ApiClient.mustache
@@ -454,7 +454,8 @@ namespace {{packageName}}.Client
                 CookieContainer = cookies,
                 MaxTimeout = configuration.Timeout,
                 Proxy = configuration.Proxy,
-                UserAgent = configuration.UserAgent
+                UserAgent = configuration.UserAgent,
+                RemoteCertificateValidationCallback = configuration.RemoteCertificateValidationCallback
             };
 
             RestClient client = new RestClient(clientOptions)
